--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         </div>
       </section>
 
-      <footer id="Footer" class="footer_section">
+      <footer id="Contact" class="footer_section">
         <div class="container">
           <div>
             <form action="" id="contactForm">
